--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,27 +3,70 @@
   <div class="container">
     <h1 class="display-3">{{title}}</h1>
 <p class="lead">{{desc}}</p>
+
+
+
+<button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-contact">
+Contact Us
+</button>
+
+<!-- Modal Contact -->
+<div class="modal animated zoomIn modal-ext" id="modal-contact" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title w-100" id="myModalLabel">Write to us</h4>
+            </div>
+            <!--Body-->
+            <div class="modal-body text-primary">
+                <h3>We like to receive a messages.</h3>
+                <br>
+                <div class="md-form">
+                    <input type="text" id="form22" class="form-control">
+                    <label for="form42">Your name</label>
+                </div>
+
+                <div class="md-form">
+                    <input type="text" id="form32" class="form-control">
+                    <label for="form34">Your email</label>
+                </div>
+
+                <div class="md-form">
+                    <input type="text" id="form32" class="form-control">
+                    <label for="form34">Subject</label>
+                </div>
+
+                <div class="md-form">
+                    <textarea type="text" id="form8" class="md-textarea"></textarea>
+                    <label for="form8">Messages</label>
+                </div>
+
+                <div class="text-center">
+                    <button class="btn btn-amber">Submit</button>
+
+                    <div class="call">
+                        <p>Or would you prefer to call? <span class="cf-phone"><i class="fa fa-phone"> +01 234 565 280</i></span></p>
+                    </div>
+                </div>
+            </div>
+            <!--Footer-->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+
+
   </div>
 </div>
 
 
-<!--Card-->
-<div class="card text-center playing-with-reds text-white">
 
-    <!--Card image-->
-    <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%282%29.jpg" alt="Card image cap">
-    <!--/.Card image-->
-
-    <!--Card content-->
-    <div class="card-block">
-        <!--Title-->
-        <h4 class="card-title">{{cardtitle}}</h4>
-        <!--Text-->
-        <p class="card-text">{{cardtext}}</p>
-        <a href="#" class="btn btn-primary">{{cardbtn}}</a>
-    </div>
-    <!--/.Card content-->
-
-</div>
-<!--/.Card-->
 
