--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <a class="nav-link" href="/">{{nav1}}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/">{{nav2}}</a>
+        <a class="nav-link" data-toggle="modal" data-target="#modal-contact">{{nav2}}</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/">{{nav3}}</a>
